--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,10 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'org.jetbrains.kotlin.plugin.serialization'
+
+
 }
 
 android {
@@ -27,8 +31,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
         jvmTarget = '1.8'
@@ -56,6 +60,15 @@ dependencies {
     implementation 'androidx.compose.material:material:1.1.1'
     implementation 'androidx.navigation:navigation-runtime-ktx:2.5.3'
     implementation "androidx.navigation:navigation-compose:2.5.3"
+    implementation 'io.ktor:ktor-client-android:2.1.3'
+    implementation "io.ktor:ktor-client-content-negotiation:2.1.3"
+    implementation "io.ktor:ktor-serialization-kotlinx-json:2.1.3"
+    implementation 'androidx.room:room-runtime:2.4.3'
+    kapt 'androidx.room:room-compiler:2.4.3'
+    implementation "androidx.room:room-ktx:2.2.5"
+    implementation "com.github.bumptech.glide:compose:1.0.0-alpha.1"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_ui_version"
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
